--- a/app/src/main/assets/nm0.html
+++ b/app/src/main/assets/nm0.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title></title>
+<title>Производная и дифференциал, их приложения. Исследование функций</title>
 </head>
 <body>
 
@@ -26,10 +26,10 @@
 
 <p><br><b>1.4 Таблица производных</b></p>
 <p>Производная константы: <i>C’=0</i></p>
-<p>Производная степенной функции: <i>(x^n)’=n·x^(n−1)</i></p>
+<p>Производная степенной функции: <i>(xⁿ)’=n·xⁿ⁺¹</i></p>
 <p>Производная квадратного корня: <i>(√x)’=1/(2√x)</i></p>
-<p>Производная экспоненты: <i>(e^x)’=e^x</i></p>
-<p>Производная показательной функции: <i>(a^x)’=(a^x)·ln(a)</i></p>
+<p>Производная экспоненты: <i>(eˣ)’=eˣ</i></p>
+<p>Производная показательной функции: <i>(aˣ)’=aˣ·ln(a)</i></p>
 <p>Производная натурального логарифма: <i>(ln(x))’=1/x</i></p>
 <p>Производная логарифма: <i>(logₐ(x))’=1/(x·ln(a))</i></p>
 <p>Производная синуса: <i>(sin(x))’=cos(x)</i></p>
