--- a/app/src/math/assets/html/ma2.html
+++ b/app/src/math/assets/html/ma2.html
@@ -18,7 +18,7 @@
 <p>1) <i>f(x)</i> и <i>g(x)</i> определены и непрерывны на отрезке <i>[a,b]</i>;</p>
 <p>2) производные <i>f'(x)</i> и <i>g'(x)</i> конечны на интервале <i>(a,b)</i>;</p>
 <p>3) производные <i>f'(x)</i> и <i>g'(x)</i> не обращаются в ноль одновременно на интервале <i>(a,b)</i>;</p>
-<p>4) <i>g(a)</i> не равно <i>g(b)</i>, тогда <i>f(b)−f(a) / g(b)−g(a) = f'(c) / g'(c)</i></p>
+<p>4) <i>g(a)</i> не равно <i>g(b)</i>, тогда <i>(f(b)−f(a)) / (g(b)−g(a)) = f'(c) / g'(c)</i></p>
 
 <p><br><b>3.3 Теорема Лагранжа</b></p>
 <p>Если функция <i>f(x)</i> непрерывна на отрезке <i>[a,b]</i> и имеет конечную или бесконечную производную во внутренних точках этого отрезка, то существует число <i>ξ∈(a,b)</i> такое, что <i>f(b)−f(a) = f'(ξ)·(b−a)</i>.</p>
