Changes in html files

--- a/app/src/math/assets/html/ma15.html
+++ b/app/src/math/assets/html/ma15.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<p><br><b>16. Операционное исчисление</b></p>
+<h2><br>16. Операционное исчисление</h2>
 
 <p><b>Операционное исчисление</b> — один из методов математического анализа, позволяющий в ряде случаев с помощью весьма простых средств решать сложные математические задачи.</p>
 <p><b>Преобразование Лапласа</b> (<i> ℒ </i>) — интегральное преобразование, связывающее функцию <i>F(p)</i> комплексного переменного (<b>изображение</b>) с функцией <i>f(t)</i> вещественного переменного (<b>оригинал</b>). С его помощью исследуются свойства динамических систем и решаются дифференциальные и интегральные уравнения.</p>
 <p>Одной из особенностей преобразования Лапласа, которые предопределили его широкое распространение в научных и инженерных расчётах, является то, что многим соотношениям и операциям над оригиналами соответствуют более простые соотношения над их изображениями. Так, свёртка двух функций сводится в пространстве изображений к операции умножения, а линейные дифференциальные уравнения становятся алгебраическими.</p>
 
-<p><br><b>16.1 Оригинал и изображение</b></p>
+<h3>16.1 Оригинал и изображение</h3>
 <p><b>Функцией-оригиналом</b> будем называть любую функцию действительного аргумента <i> t </i>: <i>f (t) = u (t) + i · v (t)</i>, удовлетворяющую следующим условиям:</p>
 <p>1) <i>f (t)</i>, <i>f ' (t)</i> или всюду непрерывны, или имеют на любом конечном промежутке лишь конечное число точек разрыва первого рода;</p>
 <p>2) <i>f (t) = 0</i> для всех точек <i>t<0</i>;</p>
@@ -23,7 +23,7 @@
 <p><i>F (p) = ℒ{ f (t) } = <sub>o </sub>∫<sup> ∞</sup> f (t) · e<sup> −pt</sup> dt</i></p>
 <p>Интеграл в формуле выше называют <b>интегралом Лапласа</b> для функции <i>f(t)</i>, переход от оригинала <i>f(t)</i> к изображению <i>F(p)</i> – <b>преобразованием Лапласа</b> и обозначают буквой <i> ℒ </i>, обратное преобразование, соответственно, обозначают <i> ℒ⁻¹ </i>.</p>
 
-<p><br><b>16.2 Свойства преобразования Лапласа</b></p>
+<h3>16.2 Свойства преобразования Лапласа</h3>
 <p>1) Линейность. Оригинал линейной комбинации функций равен линейной комбинации изображений с теми же коэффициентами.</p>
 <p><i>ℒ { a · f(t) + b · g(t) } = a · F(p) + b · G(p)</i></p>
 <p>где <i>a</i> и <i>b</i> – произвольные комплексные числа.</p>
@@ -50,7 +50,7 @@
 <p><i>ℒ { <sub>o </sub>∫<sup> τ</sup> f (τ) · g (t−τ) dt } = F (p) · G (p)</i></p>
 <p>Выражение в левой части называется <b>сверткой функций</b> <i>f(t)</i> и <i>g(t)</i> и обозначают <i>f(t)*g(t)</i>. Эта операция часто встречается при решении прикладных задач, и преобразование Лапласа позволяет заменить операцию свертки двух оригиналов операцией умножения их изображений.</p>
 
-<p><br><b>16.3 Таблица основных оригиналов и изображений</b></p>
+<h3>16.3 Таблица основных оригиналов и изображений</h3>
 <p>Ниже представлена таблица преобразования Лапласа для некоторых функций.</p>
 <p><i>ℒ { C } = C / p</i>, где <i>C</i> – <i>const</i></p>
 <p><i>ℒ { δ (t) } = 1</i></p>
