Fix typo in ma0.html

--- a/app/src/math/assets/html/ma0.html
+++ b/app/src/math/assets/html/ma0.html
@@ -26,7 +26,7 @@
 
 <h3>1.4 Таблица производных</h3>
 <p>Производная константы: <i>C’&nbsp;=&nbsp;0</i></p>
-<p>Производная степенной функции: <i>(xⁿ)’&nbsp;=&nbsp;n&nbsp;·&nbsp;xⁿ⁺¹</i></p>
+<p>Производная степенной функции: <i>(xⁿ)’&nbsp;=&nbsp;n&nbsp;·&nbsp;xⁿ⁻¹</i></p>
 <p>Производная квадратного корня: <i>(√x)’&nbsp;=&nbsp;1&nbsp;/&nbsp;(2√x)</i></p>
 <p>Производная экспоненты: <i>(eˣ)’&nbsp;=&nbsp;eˣ</i></p>
 <p>Производная показательной функции: <i>(aˣ)’&nbsp;=&nbsp;aˣ&nbsp;·&nbsp;ln(a)</i></p>
